Enhance date handling and localization support
- Updated `AddActivityForm.razor` to conditionally display valid minimum and maximum activity dates.
- Modified logic for setting `MinActDate` and `MaxActDate` to include additional `WorkOrder` properties.
- Changed `WorkLoad` property in `ActivityModel` to enforce a range of 0 to 24.
- Updated `UIStrings.pl-PL.resx` and `UIStrings.resx` with new error and validation messages.

--- a/BlazorTool.Client/Pages/Login.razor
+++ b/BlazorTool.Client/Pages/Login.razor
@@ -56,6 +56,8 @@
     protected override async Task OnInitializedAsync()
     {
         Persons = await ApiServiceClient.GetAllPersons();
+        // await UserState.InitializationTask;
+        //TODO read from cache and fill to inputs Username and Pass
     }
 
     private async Task HandleLogin()
