--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -96,7 +96,10 @@
                                 Max="@MaxActDate"
                                 />
                             </div>
-                            <p style="text-align:end; font-size:smaller;"> Min=@MinActDate.ToString("G") / Max=@MaxActDate.ToString("G")</p>
+                    @if (MinActDate > DateTime.MinValue && MaxActDate < DateTime.MaxValue)
+                            {
+                             <p style="text-align:end; font-size:smaller;"> Min=@MinActDate.ToString("G") / Max=@MaxActDate.ToString("G")</p>
+                            }
                         </Template>
                     </FormItem>
             </div>
@@ -138,8 +141,8 @@
         ActivityModel.PersonID = UserState.PersonID ?? 0;
         ActivityModel.Cost = 0;
         var WO = await ApiClient.GetWorkOrderByIdAsync(WorkOrderID);
-        MinActDate = WO?.StartDate ?? DateTime.MinValue;
-        MaxActDate = WO?.EndDate ?? DateTime.MaxValue;
+        MinActDate = WO?.StartDate ?? WO?.TakeDate ?? WO?.AddDate ?? DateTime.MinValue;
+        MaxActDate = WO?.EndDate ?? WO?.CloseDate ?? DateTime.MaxValue;
         ActivityModel.ActDate = ((MinActDate < DateTime.Now) && (MaxActDate > DateTime.Now)) ? DateTime.Now : MinActDate;
         var takePersonsIDs = WO.TakePersons?.Split('#');
         bool isMyOrder = takePersonsIDs?.Any(x => x == UserState.PersonID.ToString()) ?? false;
