--- a/BlazorTool.Client/Pages/Settings.razor.css
+++ b/BlazorTool.Client/Pages/Settings.razor.css
@@ -86,3 +86,12 @@ h3 {
 
 .form-grid {
 }
+
+.MyTelerikNotification .k-notification-container .k-notification {
+    width: 300px;
+    height: 50px;
+    font-size: 1.5em;
+    text-align: center;
+    align-items: center;
+
+}
