--- a/BlazorTool.Client/Pages/Home.razor.css
+++ b/BlazorTool.Client/Pages/Home.razor.css
@@ -60,3 +60,10 @@
     background-color: #f5f5f5;
     border-bottom: 1px solid #ddd;
 }
+
+.buttons-row {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
