Add activities page  with new components
This commit introduces a new activity management feature, allowing users to add, edit, and manage activities associated with work orders. Key components include `NewActivityFormComponent` for inputting activity details and `ActivitySchedulerItem` for rendering activities in various views (Month, Week, Day, Timeline).

The `ActivityAppointment` model has been created to support appointment-specific properties. The navigation menu has been updated to link to the new activities page, enhancing accessibility.

Additionally, the `ApiServiceClient` has been modified to retrieve activities from the API and cache, improving performance. Localization files have been updated for multi-language support, and CSS styles have been added for visual consistency.

Overall, the architecture has been enhanced to provide a cohesive user experience for activity management.

--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -32,6 +32,12 @@
             </NavLink>
         </div>
         <div class="nav-item">
+            <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="activities">
+                <TelerikSvgIcon Icon="@SvgIcon.StarOutline" Size="lg"></TelerikSvgIcon>
+                <span class="p-2">@Localizer["NavMenu_Activities"]</span>
+            </NavLink>
+        </div>
+        <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="devices">
                 <TelerikSvgIcon Icon="@SvgIcon.Gears" Size="lg"></TelerikSvgIcon>
                 <span class="p-2" >@Localizer["NavMenu_Devices"]</span>
