Enhance activity management with localization and styling
- Updated `ActivityCard.razor` to support localization, displaying activity details with improved layout and styling.
- Introduced CSS variables in `ActivityCard.razor.css` for theming and enhanced visual presentation.
- Added new styles in `ActivityDisplay.razor.css` for `.k-event-template`.
- Modified `ActivitySchedulerItem.razor` to handle localization and different views, distinguishing between work orders and activities.
- Enhanced `Title` property logic in `ActivityAppointment.cs` to include work order information and added new constructors.
- Significant updates to `ActivitiesPage.razor`, including new windows for adding activities and refined appointment handling.
- Updated context menu handling in `SchedulerPage.razor` for improved user interaction.
- Refreshed localization strings in `UIStrings.Designer.cs`, `UIStrings.pl-PL.resx`, and `UIStrings.resx`.
- Improved work order fetching logic in `ApiServiceClient.WorkOrders.cs`, removing outdated caching logic.

--- a/BlazorTool.Client/Components/ActivitySchedulerItem.razor.css
+++ b/BlazorTool.Client/Components/ActivitySchedulerItem.razor.css
@@ -11,10 +11,16 @@
 }
 
 /* --- Common styles for Day/Week details --- */
-.scheduler-item-details {
+.scheduler-activity-details {
     display: flex;
     flex-direction: column;
 
+}
+
+.scheduler-workorder-details {
+    display: flex;
+    flex-direction: column;
+/*    background-color: #8acdfe8f;*/
 }
 
 .item-header {
@@ -22,8 +28,7 @@
 }
 
 .item-body {
-    white-space: nowrap;
-
+    white-space: collapse;
 }
 
 .item-description {
@@ -38,7 +43,7 @@
     padding: 2px 4px;
 }
 
-.view-week .scheduler-item-details {
+.view-week .scheduler-activity-details, .view-week .scheduler-workorder-details {
     font-size: 16px;
 }
 
@@ -57,9 +62,9 @@
     padding: 5px;
 }
 
-.view-day .scheduler-item-details {
-    font-size: 18px; /* Larger base font */
-}
+    .view-day .scheduler-activity-details, .view-week .scheduler-workorder-details {
+        font-size: 18px; /* Larger base font */
+    }
 
 .view-day .item-body {
     font-size: 18px;
