--- a/BlazorTool.Client/Components/DeviceDisplay.razor
+++ b/BlazorTool.Client/Components/DeviceDisplay.razor
@@ -187,8 +187,9 @@
                 {
 
                             <div >
-                                @IconHtmlHelper.Picture(150)
+                                @* @IconHtmlHelper.Picture(150) *@
                                 <br />
+                                @SvgIcon.FileImage
                                 No photo
                             </div>
 
