--- a/BlazorTool.Client/Pages/ActivitiesPage.razor.css
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor.css
@@ -102,3 +102,8 @@
     min-width: 0; /* Important fix for flexbox overflow */
 }
 
+.wo-background {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
